# yoda

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
tests/: test_cli.py  test_integration.py
yoda/: cli.py  main.py
yoda/cmds/nginx/: site_add.py  site_template.py
yoda/cmds/systemd/: service_add.py
yoda/cmds/user/: adduser.py
yoda/ssh/: config.py  shell.py
